[package]
name = "rustypot"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Pollen Robotics"]
description = "Package to communicate with Dynamixel motors."
homepage = "https://www.pollen-robotics.com"
repository = "https://github.com/pollen-robotics/rustypot"
readme = "README.md"
keywords = ["robotics", "dynamixel"]
categories = ["science::robotics"]
autoexamples = false #disable auto discovery of examples


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
paste = "1.0.10"
serialport = "4.2.0"
clap = { version = "4.0.32", features = ["derive"] }
proc-macro2 = { version = "=1.0.67", features=["default", "proc-macro"] }
signal-hook = "0.3.4"
num_enum = "0.7.3"

[dev-dependencies]
env_logger = "0.10.0"
