[package]
name = "rustypot"
version = "1.4.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Pollen Robotics"]
description = "Package to communicate with Dynamixel motors."
homepage = "https://www.pollen-robotics.com"
repository = "https://github.com/pollen-robotics/rustypot"
readme = "README.md"
keywords = ["robotics", "dynamixel", "feetech"]
categories = ["science::robotics"]

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []
python = ["dep:pyo3", "dep:pyo3-log", "dep:pyo3-stub-gen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
paste = "1.0.10"
serialport = { version = "4.2.0", default-features = false}
clap = { version = "4.0.32", features = ["derive"] }
proc-macro2 = { version = "1.0", features=["default", "proc-macro"] }
signal-hook = "0.3.4"
num_enum = "0.7.3"
pyo3 = { version = ">=0.27.1", optional = true, features = ["multiple-pymethods"] }
pyo3-log = { version = ">=0.13.2", optional = true }
pyo3-stub-gen = { version = ">=0.17.0", optional = true }
env_logger = "0.10.0"

[[bin]]
name = "stub_gen"
required-features = ["python"]
